# mcp-server-and-prompts

./: .gitignore  QUICKFIX-AZURE-LOGIN.md  QUICKSTART-CI-CD.md  README.md
.github/: copilot-instructions.md
.github/prompts/: azure-devops-assign-by-id.prompt.md  azure-devops-assign-current-sprint-task.prompt.md  azure-devops-cicd-pipeline-generator.prompt.md  azure-devops-get-task-details.prompt.md  azure-devops-implement-work-item.prompt.md  azure-devops-update-work-item.prompt.md  github-cicd-pipeline-generator.prompt.md  implement-work-azure-devops-assign-by-id.prompt.md  mysql-run-query.prompt.md  playwright-diagnose-fix-retest.prompt.md  playwright-run-flow.prompt.md
.github/workflows/: README.md  ci-cd-pipeline.yml
docs/: AZURE-LOGIN-FIX.md  AZURE-WEBAPP-DEPLOYMENT.md  AZURE-WEBAPP-IMPLEMENTATION.md  CI-CD-FIX-NODEJS-DEPENDENCIES.md  CI-CD-IMPLEMENTATION-SUMMARY.md  CREATION_SUMMARY.md  QUICK_REFERENCE.md  github-cicd-pipeline-generator.md
docs/examples/: github-cicd-example-output.md
project/: .env.example  .gitignore  README.md  pyproject.toml
project/src/: README.md  app.py  config.py  database.py
project/src/models/: __init__.py  order.py
project/src/routes/: __init__.py  orders.py
project/src/templates/: base.html  create_order.html  edit_order.html  index.html
project/test-artifacts/: TEST-REPORT.md
scripts/: setup-azure-webapp-secrets.ps1  test-azure-credentials-format.ps1
scripts/prompts/: set-azure-devops-env.ps1  set-github-cicd-env.ps1
